This is a roll-up of all the small bugfixes for the last couple of years, especially those that stop Weathermap
working with newer MySQL or PHP versions. There is a more substantial 1.0 release in the works, but I will backport
any simple improvements or fixes to 0.98(abcd) releases. There are also small usability changes aimed at reducing
repeat "error reports" in the forums.

0.98
    FIXED - MySQL error in table-creation. MySQL 5.6 is fussier.
    FIXED - Editor 'delete link' broken
    FIXED - KILO was ignored when processing %k in special tokens
    FIXED - Various fixes for PHP deprecated or strict-mode warnings
    FIXED - Line-ending trimming in 'external script' data source
    FIXED - rounding error 'kinks' in angled VIA links
    FIXED - Config file path validation issue in editor (CVE-2013-3739)
    FIXED - Cloning a templated node in editor retains the template in the clone
    FIXED - cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available
    FIXED - More PHP 5.3/5.4/strict related errors (split -> explode)
    CHANGE - Editor data picker improved sort (thanks shd)
    CHANGE - (Cacti plugin only) images are written to a temporary file first, to avoid displaying half-written images
    CHANGE - if there are actually 0 maps in the database, the 'Weathermaps' tab gives some basic instructions.
    ADDED - Weathermap will use anti-aliasing if your GD supports it (php-bundled GD doesn't) (thanks shd)
    ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
    ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
    ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
    ADDED - IMAGEOUTPUTFILE and HTMLOUTPUTFILE are honoured in Cacti poller as a location for a second copy of those files.
    ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job