@@ -3,6 +3,10 @@ working with newer MySQL or PHP versions. There is a more substantial 1.0 releas
 any simple improvements or fixes to 0.98(abcd) releases. There are also small usability changes aimed at reducing
 repeat "error reports" in the forums.
 
+IMPORTANT NOTE - you will need to reset permissions on your users after upgrading, as I've
+finally switched to the "new-style" plugin API that's been around for 5+ years. This handles
+permissions differently, unfortunately.
+
 0.98
     FIXED - MySQL error in table-creation. MySQL 5.6 is fussier.
     FIXED - Editor 'delete link' broken
@@ -14,6 +18,7 @@ repeat "error reports" in the forums.
     FIXED - Cloning a templated node in editor retains the template in the clone
     FIXED - cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available
     FIXED - More PHP 5.3/5.4/strict related errors (split -> explode)
+    CHANGE - Finally switch to "new-style" plugin API.
     CHANGE - Editor data picker improved sort (thanks shd)
     CHANGE - (Cacti plugin only) images are written to a temporary file first, to avoid displaying half-written images
     CHANGE - if there are actually 0 maps in the database, the 'Weathermaps' tab gives some basic instructions.
